--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -282,8 +282,8 @@ my_borrowing_list <- sim_borrowing_list(
   list(
     "No borrowing" = borrowing_details("No borrowing", "ext"),
     "Full borrowing" = borrowing_details("Full borrowing", "ext"),
-    "BDB - conservative" = borrowing_details("BDB", "ext", gamma_prior(0.001, 0.001)),
-    "BDB - aggressive" = borrowing_details("BDB", "ext", gamma_prior(1, 0.001))
+    "BDB - conservative" = borrowing_details("BDB_HCP", "ext", gamma_prior(0.001, 0.001)),
+    "BDB - aggressive" = borrowing_details("BDB_HCP", "ext", gamma_prior(1, 0.001))
   )
 )
 
@@ -366,7 +366,7 @@ simulation_res <- mcmc_sample(
   simulation_obj,
   posterior_quantiles = c(0.025, 0.975),
   iter_warmup = 400,
-  iter_sampling = 1000,
+  iter_sampling = 500,
   chains = 1L,
   seed = 112233
 )
@@ -378,7 +378,7 @@ simulation_res <- mcmc_sample(
   simulation_obj,
   posterior_quantiles = c(0.025, 0.975),
   iter_warmup = 400,
-  iter_sampling = 1000,
+  iter_sampling = 500,
   chains = 1L,
   seed = 112233
 )
