--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -23,77 +23,6 @@ randomized controlled trials. @wang2021 discuss using PS for IPTW, matching and 
 These methods allow for the separation of the design and analysis into two stages, which may be attractive in a regulatory setting.
 Another approach is the direct inclusion of the PS as a covariate in the outcome model.
 
-## Propensity Score Calculation
-
-Propensity scores are the probabilities that an observation belongs to one group or another, in this setting the
-internal or external patients. The PS models are fitted based on baseline covariates that could be confounders between
-outcome and being in the internal/external group.
-
-The simplest approach for calculating PS is a logistic generalized linear model. First, let's load some demo data from
-`psborrow2`.
-
-
-```r
-example_dataframe <- as.data.frame(example_matrix)
-example_dataframe$int <- 1 - example_dataframe$ext
-```
-
-Let's now fit a logistic generalized linear model and add the PS as an additional covariate.
-
-
-```r
-ps_model <- glm(int ~ cov1 + cov2 + cov3 + cov4,
-  data = example_dataframe,
-  family = binomial
-)
-ps <- predict(ps_model, type = "response")
-example_dataframe$ps <- ps
-
-example_dataframe$ps_cat_ <- cut(
-  example_dataframe$ps,
-  breaks = 5,
-  include.lowest = TRUE
-)
-levels(example_dataframe$ps_cat_) <- c(
-  "ref", "low",
-  "low_med", "high_med", "high"
-)
-```
-
-
-
-The calculated PS can be included as a covariate in the analysis object, for the "covariate adjustment" PS approach:
-
-
-```r
-analysis_ps_cuts <- create_analysis_obj(
-  data_matrix = example_matrix_ps,
-  covariates = add_covariates(
-    c("ps_cat_low", "ps_cat_low_med", "ps_cat_high_med", "ps_cat_high"),
-    priors = normal_prior(0, 10000)
-  ),
-  outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000)),
-  borrowing = borrowing_details("Full borrowing", "ext"),
-  treatment = treatment_details("trt", normal_prior(0, 10000))
-)
-#> Inputs look good.
-#> NOTE: dropping column `ext` for full borrowing.
-#> Stan program compiled successfully!
-#> Ready to go! Now call `mcmc_sample()`.
-
-result_ps_cuts <- mcmc_sample(analysis_ps_cuts)
-#> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 7.2 seconds.
-#> Chain 2 finished in 8.4 seconds.
-#> Chain 3 finished in 16.1 seconds.
-#> Chain 4 finished in 12.2 seconds.
-#>
-#> All 4 chains finished successfully.
-#> Mean chain execution time: 11.0 seconds.
-#> Total execution time: 44.4 seconds.
-```
-
 
 ## Alternative PS Weights with `WeightIt`
 
@@ -118,28 +47,28 @@ weightit_model <- weightit(
 #> Warning: No `criterion` was provided. Using "smd.mean"FALSETRUE.
 summary(weightit_model)
 #>                  Summary of weights
-#>
+#> 
 #> - Weight ranges:
-#>
+#> 
 #>            Min                                  Max
 #> treated 1.0000      ||                       1.0000
 #> control 0.0826 |---------------------------| 5.8966
-#>
+#> 
 #> - Units with the 5 most extreme weights by group:
-#>
+#>                                            
 #>               5      4      3      2      1
 #>  treated      1      1      1      1      1
 #>             195    158    465    438    371
 #>  control 2.7924 2.7924 5.8966 5.8966 5.8966
-#>
+#> 
 #> - Weight statistics:
-#>
+#> 
 #>         Coef of Var  MAD Entropy # Zeros
 #> treated       0.000 0.00     0.0       0
 #> control       1.582 0.82     0.6       0
-#>
+#> 
 #> - Effective Sample Sizes:
-#>
+#> 
 #>            Control Treated
 #> Unweighted  350.       150
 #> Weighted    100.09     150
@@ -159,6 +88,15 @@ bal.plot(weightit_model)
 ```
 
 <img src="figure-propensity_scores-balplot-1.png" alt="plot of chunk balplot" style="display: block; margin: auto;" />
+
+"Love plots" can also be generated that compare the populations before and after weighting:
+
+
+```r
+love.plot(weightit_model, stars = "std")
+```
+
+<img src="figure-propensity_scores-loveplot-1.png" alt="plot of chunk loveplot" style="display: block; margin: auto;" />
 
 The PS values can be copied into the data set and the analysis object can be constructed as before.
 
@@ -187,15 +125,15 @@ analysis_att <- create_analysis_obj(
 
 result_att <- mcmc_sample(analysis_att)
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 5.1 seconds.
-#> Chain 2 finished in 3.8 seconds.
-#> Chain 3 finished in 5.4 seconds.
-#> Chain 4 finished in 5.9 seconds.
-#>
+#> 
+#> Chain 1 finished in 2.4 seconds.
+#> Chain 2 finished in 2.8 seconds.
+#> Chain 3 finished in 2.7 seconds.
+#> Chain 4 finished in 2.9 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 5.0 seconds.
-#> Total execution time: 20.6 seconds.
+#> Mean chain execution time: 2.7 seconds.
+#> Total execution time: 11.2 seconds.
 ```
 
 
@@ -210,10 +148,10 @@ it can be useful to check the imbalance before matching.
 
 ```r
 library(MatchIt)
-#>
+#> 
 #> Attaching package: 'MatchIt'
 #> The following object is masked from 'package:cobalt':
-#>
+#> 
 #>     lalonde
 # No matching; constructing a pre-match matchit object
 no_match <- matchit(trt ~ cov1 + cov2 + cov3 + cov4,
@@ -221,11 +159,11 @@ no_match <- matchit(trt ~ cov1 + cov2 + cov3 + cov4,
   method = NULL, distance = "glm"
 )
 summary(no_match)
-#>
+#> 
 #> Call:
-#> matchit(formula = trt ~ cov1 + cov2 + cov3 + cov4, data = example_dataframe,
+#> matchit(formula = trt ~ cov1 + cov2 + cov3 + cov4, data = example_dataframe, 
 #>     method = NULL, distance = "glm")
-#>
+#> 
 #> Summary of Balance for All Data:
 #>          Means Treated Means Control Std. Mean Diff. Var. Ratio eCDF Mean
 #> distance        0.2898        0.1776          0.7585     1.5831    0.2328
@@ -239,7 +177,7 @@ summary(no_match)
 #> cov2       0.0925
 #> cov3       0.3125
 #> cov4       0.2350
-#>
+#> 
 #> Sample Sizes:
 #>           Control Treated
 #> All           400     100
@@ -258,11 +196,11 @@ match_11 <- matchit(trt ~ cov1 + cov2 + cov3 + cov4,
   method = "nearest", distance = "glm"
 )
 summary(match_11)
-#>
+#> 
 #> Call:
-#> matchit(formula = trt ~ cov1 + cov2 + cov3 + cov4, data = example_dataframe,
+#> matchit(formula = trt ~ cov1 + cov2 + cov3 + cov4, data = example_dataframe, 
 #>     method = "nearest", distance = "glm")
-#>
+#> 
 #> Summary of Balance for All Data:
 #>          Means Treated Means Control Std. Mean Diff. Var. Ratio eCDF Mean
 #> distance        0.2898        0.1776          0.7585     1.5831    0.2328
@@ -276,7 +214,7 @@ summary(match_11)
 #> cov2       0.0925
 #> cov3       0.3125
 #> cov4       0.2350
-#>
+#> 
 #> Summary of Balance for Matched Data:
 #>          Means Treated Means Control Std. Mean Diff. Var. Ratio eCDF Mean
 #> distance        0.2898        0.2845          0.0355     1.1082    0.0075
@@ -290,7 +228,7 @@ summary(match_11)
 #> cov2         0.02          0.1243
 #> cov3         0.00          0.0000
 #> cov4         0.00          0.0000
-#>
+#> 
 #> Sample Sizes:
 #>           Control Treated
 #> All           400     100
@@ -337,15 +275,15 @@ analysis_match <- create_analysis_obj(
 
 result_match <- mcmc_sample(analysis_match)
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 1.5 seconds.
-#> Chain 2 finished in 1.8 seconds.
-#> Chain 3 finished in 1.5 seconds.
-#> Chain 4 finished in 1.6 seconds.
-#>
+#> 
+#> Chain 1 finished in 1.1 seconds.
+#> Chain 2 finished in 1.4 seconds.
+#> Chain 3 finished in 1.3 seconds.
+#> Chain 4 finished in 1.1 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 1.6 seconds.
-#> Total execution time: 6.6 seconds.
+#> Mean chain execution time: 1.2 seconds.
+#> Total execution time: 5.2 seconds.
 ```
 
 
@@ -370,15 +308,15 @@ analysis_iptw_bdb <- create_analysis_obj(
 
 result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb)
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 13.4 seconds.
-#> Chain 2 finished in 16.1 seconds.
-#> Chain 3 finished in 8.0 seconds.
-#> Chain 4 finished in 7.4 seconds.
-#>
+#> 
+#> Chain 1 finished in 4.8 seconds.
+#> Chain 2 finished in 5.3 seconds.
+#> Chain 3 finished in 5.2 seconds.
+#> Chain 4 finished in 5.3 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 11.2 seconds.
-#> Total execution time: 45.3 seconds.
+#> Mean chain execution time: 5.2 seconds.
+#> Total execution time: 20.8 seconds.
 ```
 
 
@@ -404,15 +342,15 @@ analysis_pp01 <- create_analysis_obj(
 
 result_pp01 <- mcmc_sample(analysis_pp01)
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 4.1 seconds.
-#> Chain 2 finished in 4.3 seconds.
-#> Chain 3 finished in 4.6 seconds.
-#> Chain 4 finished in 8.0 seconds.
-#>
+#> 
+#> Chain 1 finished in 2.7 seconds.
+#> Chain 2 finished in 2.6 seconds.
+#> Chain 3 finished in 2.9 seconds.
+#> Chain 4 finished in 2.7 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 5.3 seconds.
-#> Total execution time: 21.5 seconds.
+#> Mean chain execution time: 2.7 seconds.
+#> Total execution time: 11.1 seconds.
 ```
 
 
@@ -435,15 +373,15 @@ result_full <- mcmc_sample(
 #> Stan program compiled successfully!
 #> Ready to go! Now call `mcmc_sample()`.
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 3.5 seconds.
-#> Chain 2 finished in 3.6 seconds.
-#> Chain 3 finished in 3.2 seconds.
-#> Chain 4 finished in 2.4 seconds.
-#>
+#> 
+#> Chain 1 finished in 2.0 seconds.
+#> Chain 2 finished in 2.1 seconds.
+#> Chain 3 finished in 2.1 seconds.
+#> Chain 4 finished in 1.9 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 3.2 seconds.
-#> Total execution time: 13.1 seconds.
+#> Mean chain execution time: 2.0 seconds.
+#> Total execution time: 8.4 seconds.
 
 result_none <- mcmc_sample(
   create_analysis_obj(
@@ -458,15 +396,15 @@ result_none <- mcmc_sample(
 #> Stan program compiled successfully!
 #> Ready to go! Now call `mcmc_sample()`.
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 1.3 seconds.
-#> Chain 2 finished in 1.3 seconds.
-#> Chain 3 finished in 1.2 seconds.
-#> Chain 4 finished in 1.2 seconds.
-#>
+#> 
+#> Chain 1 finished in 1.0 seconds.
+#> Chain 2 finished in 0.9 seconds.
+#> Chain 3 finished in 1.0 seconds.
+#> Chain 4 finished in 1.0 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 1.3 seconds.
-#> Total execution time: 5.2 seconds.
+#> Mean chain execution time: 1.0 seconds.
+#> Total execution time: 4.1 seconds.
 
 result_bdb <- mcmc_sample(
   create_analysis_obj(
@@ -480,15 +418,15 @@ result_bdb <- mcmc_sample(
 #> Stan program compiled successfully!
 #> Ready to go! Now call `mcmc_sample()`.
 #> Running MCMC with 4 sequential chains...
-#>
-#> Chain 1 finished in 6.7 seconds.
-#> Chain 2 finished in 7.1 seconds.
-#> Chain 3 finished in 7.7 seconds.
-#> Chain 4 finished in 7.7 seconds.
-#>
+#> 
+#> Chain 1 finished in 4.2 seconds.
+#> Chain 2 finished in 4.6 seconds.
+#> Chain 3 finished in 4.4 seconds.
+#> Chain 4 finished in 4.6 seconds.
+#> 
 #> All 4 chains finished successfully.
-#> Mean chain execution time: 7.3 seconds.
-#> Total execution time: 29.4 seconds.
+#> Mean chain execution time: 4.5 seconds.
+#> Total execution time: 18.2 seconds.
 ```
 
 
@@ -506,6 +444,7 @@ models <- list(
   "Matching 1:1" = result_match,
   "BDB" = result_bdb
 )
+#> Error in eval(expr, envir, enclos): object 'result_ps_cuts' not found
 ```
 
 We can use `summary()` to extract the variable of interest and specify summary statistics.
@@ -515,21 +454,10 @@ results_table <- do.call(rbind, lapply(
   models,
   function(i) i$summary("HR_trt", c("mean", "median", "sd", "quantile2"))
 ))
+#> Error in eval(expr, envir, enclos): object 'models' not found
 knitr::kable(cbind(models = names(models), results_table), digits = 3)
+#> Error in eval(expr, envir, enclos): object 'models' not found
 ```
-
-
-
-|models         |variable |  mean| median|    sd|    q5|   q95|
-|:--------------|:--------|-----:|------:|-----:|-----:|-----:|
-|No borrowing   |HR_trt   | 0.897|  0.878| 0.183| 0.635| 1.224|
-|Full borrowing |HR_trt   | 0.388|  0.385| 0.049| 0.311| 0.473|
-|Power Prior 01 |HR_trt   | 0.634|  0.624| 0.105| 0.478| 0.821|
-|PS Groups      |HR_trt   | 0.720|  0.714| 0.095| 0.571| 0.883|
-|ATT Weights    |HR_trt   | 0.894|  0.886| 0.127| 0.700| 1.119|
-|IPTW + BDB     |HR_trt   | 0.894|  0.880| 0.161| 0.657| 1.178|
-|Matching 1:1   |HR_trt   | 0.794|  0.783| 0.128| 0.605| 1.022|
-|BDB            |HR_trt   | 0.873|  0.855| 0.175| 0.620| 1.190|
 
 We can extract a `draws` object from each model and plot the posterior distribution of the
 treatment hazard ratio.
@@ -540,13 +468,14 @@ plot(density(models[[1]]$draws("HR_trt")),
   xlab = "HR_trt",
   main = "Posterior Hazard Ratio"
 )
+#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'plot': object 'models' not found
 for (i in 2:8) {
   lines(density(models[[i]]$draws("HR_trt")), col = i, lty = i, lwd = 2)
 }
+#> Error in eval(expr, envir, enclos): object 'models' not found
 legend("topright", col = seq_along(models), lty = seq_along(models), legend = names(models))
+#> Error in eval(expr, envir, enclos): object 'models' not found
 ```
-
-<img src="figure-propensity_scores-plots-1.png" alt="plot of chunk plots" style="display: block; margin: auto;" />
 
 Here we see no borrowing and full borrowing at the extremes and the other methods in between.
 
