--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -85,7 +85,7 @@ example_matrix_att <- create_data_matrix(
 
 analysis_att <- create_analysis_obj(
   data_matrix = example_matrix_att,
-  outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
   borrowing = borrowing_details("Full borrowing", "ext"),
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
@@ -145,7 +145,7 @@ example_matrix_match <- create_data_matrix(
 ```{r}
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
-  outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000)),
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
   borrowing = borrowing_details("Full borrowing", "ext"),
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
@@ -164,7 +164,7 @@ IPTW + commensurate prior approach.
 ```{r}
 analysis_iptw_bdb <- create_analysis_obj(
   data_matrix = example_matrix_att,
-  outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
   borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
@@ -183,7 +183,7 @@ example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, 
 
 analysis_pp01 <- create_analysis_obj(
   data_matrix = example_matrix_pp01,
-  outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000), weight_var = "pp_alpha"),
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "pp_alpha"),
   borrowing = borrowing_details("Full borrowing", "ext"),
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
@@ -200,7 +200,7 @@ For comparison, we also fit a full borrowing, a no borrowing, and a BDB model wi
 result_full <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
-    outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000)),
+    outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("Full borrowing", "ext"),
     treatment = treatment_details("trt", normal_prior(0, 10000))
   )
@@ -209,7 +209,7 @@ result_full <- mcmc_sample(
 result_none <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
-    outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000)),
+    outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("No borrowing", "ext"),
     treatment = treatment_details("trt", normal_prior(0, 10000))
   )
@@ -218,7 +218,7 @@ result_none <- mcmc_sample(
 result_bdb <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix_att,
-    outcome = exp_surv_dist("time", "cnsr", normal_prior(0, 10000)),
+    outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
     treatment = treatment_details("trt", normal_prior(0, 10000))
   )
