--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -158,11 +158,11 @@ The column definitions are below:
 `psborrow2` currently supports three outcomes:
 
 * Time-to-event with exponential distribution (constant hazard), created with
-`exp_surv_dist()`
+`outcome_surv_exponential()`
 * Time-to-event with Weibull distribution and proportional hazards
-parametrization, created with `weib_ph_surv_dist()`
+parametrization, created with `outcome_surv_weibull_ph()`
 * Binary endpoints with a Bernoulli distribution and using logistic regression,
-created with `logistic_bin_outcome()`
+created with `outcome_bin_logistic()`
 
 After we select which outcome and distribution we want,
 we need to specify a prior distribution for the baseline event rate,
@@ -175,7 +175,7 @@ For our example, let's conduct a time-to-event analysis using the exponential
 distribution.
 
 ```{r exp-surv-dist}
-outcome <- exp_surv_dist(
+outcome <- outcome_surv_exponential(
   time_var = "time",
   cens_var = "cnsr",
   baseline_prior = normal_prior(0, 1000)
